<resources>
    <string name="app_name">Board Game Collector</string>
    <string name="thumbnail">Thumbnail of the board game</string>
    <string name="name">Name</string>
    <string name="original_name">Original name</string>
    <string name="date_ordered">Date ordered</string>
    <string name="date_added">Date added</string>
    <string name="price_purchased">Price purchased</string>
    <string name="rrp">Recommended retail price (RRP)</string>
    <string name="description">Description</string>
    <string name="year_published">Year published</string>
    <string name="artists">Artists</string>
    <string name="designers">Designers</string>
    <string name="barcode">Barcode</string>
    <string name="mpn">Manufacturer part number (MPN)</string>
    <string name="bggid" translatable="false">Board Game Geek ID</string>
    <string name="rank">BGG rank</string>
    <string name="base_expansion_status">Base / Expansion</string>
    <string name="comment">Comment</string>
    <string name="location">Location</string>
    <string name="location_comment">Location comment</string>
    <string name="expansions">Expansions</string>
    <string name="base">Base</string>
    <string name="expansion">Expansion</string>
    <string name="both">Both</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_year">Sort by year</string>
    <string name="sort_by_rank">Sort by rank</string>
    <string name="edit_title">Edit details</string>
    <string name="details_title">Board game details</string>
    <string name="board_game_edited">Board game was edited</string>
    <string name="editing_cancelled">Editing of the board game was cancelled</string>
    <string name="hide_expansions">Hide expansions</string>
    <string name="null_location_name">Unnamed</string>
    <string name="delete">Delete</string>
    <string name="noneSelected">None</string>
    <string name="unnamed_board_game">Unnamed board game</string>
    <string name="add">Add manually</string>
    <string name="adding_cancelled">Adding the board game was cancelled</string>
    <string name="add_title">Add a board game</string>
    <string name="board_game_added">Board game was added</string>
    <string name="error">ERROR</string>
    <string name="board_game_deleted">Board game was deleted</string>
    <string name="reset_collection">Reset collection</string>
    <string name="search_name">Search by board game name</string>
    <string name="add_bgg_title">Add from Board Game Geek</string>
    <string name="search_username">Search in user`s collection</string>
    <string name="search_phrase">Search phrase (game name / username)</string>
    <string name="add_all">Add all search results</string>
    <string name="search_name_not_found">No board games with the given phrase in the name were found</string>
    <string name="search_username_not_found">Such user has no board games in collection or does not exist</string>
    <string name="search_long_loading_warning">Please wait - loading %1$d search results is in progress</string>
    <string name="search_cancelled">Loading search results was cancelled</string>
    <string name="loading_board_game">Loading board game from Board Game Geek</string>
    <string name="search_add_all_wait">Adding all %1$d search results - it may take from a few seconds to tens of minutes</string>
    <string name="search_add_all_empty">No board games to add</string>
    <string name="display_all_please_wait">Please wait - loading %1$d board games</string>
    <string name="loading_cancelled">Loading board games was cancelled</string>
    <string name="added_X_games">Added %1$d board games from search results</string>
    <string name="reset_done">Board game collection was reset</string>
    <string name="search_add_all_cancelled">Adding all %1$d search results was interrupted</string>
    <string name="rank_history_title">Rank history</string>
    <string name="rank_history_empty">This board game has no rank history</string>
    <string name="clipboard">Copied to clipboard</string>
    <string name="search_results">%1$d search results</string>
    <string name="in_collection">%1$d board games in the collection</string>
    <string name="update_rank">Update BGG rank</string>
    <string name="rank_updated">BGG rank was updated</string>
    <string name="rank_not_updated">BGG was not updated</string>
    <string name="rank_update_cancelled">BGG rank update was cancelled</string>
    <string name="update_rank_wrong_bggid">Board game has incorrect BGG ID</string>
    <string name="load_current_ranking">Load current BGG ranking</string>
    <string name="load_current_ranking_cancelled">Loading current Board Game Geek ranking for all board games in collection was interrupted</string>
    <string name="load_current_ranking_start">Please wait - loading current Board Game Geek ranking for all board games in collection (apart from expansions)</string>
    <string name="load_current_ranking_finish">Current Board Game Geek ranking was loaded for %1$d board games in collection</string>
    <string name="locations_title">Locations</string>
    <string name="locations_subtitle">%1$d locations saved</string>
    <string name="add_location">Add a new location</string>
    <string name="edit_location">Edit existing location</string>
    <string name="confirm">Confirm</string>
    <string name="unnamed_location">Unnamed location</string>
    <string name="location_no_games">empty</string>
    <string name="cancel">Cancel</string>
    <string name="location_cant_delete">Can\'t delete this location because it isn\'t empty</string>
    <string name="location_deleted">Location was deleted</string>
    <string name="location_wrong_name">Wrong location name</string>
    <string name="location_added">Location was added</string>
    <string name="location_edited">Location name was edited</string>
</resources>