<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ubiquitous.boardgamecollector.MainActivity">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_by_rank"
            android:title="@string/sort_by_rank" />
        <item
            android:id="@+id/sort_by_name"
            android:title="@string/sort_by_name" />
        <item
            android:id="@+id/sort_by_year"
            android:title="@string/sort_by_year" />

    </group>

    <item
        android:id="@+id/hideExpansions"
        android:checkable="true"
        android:title="@string/hide_expansions"
        android:visible="true"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/addBGG"
        android:title="@string/add_bgg_title"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/loadCurrentRanking"
        android:title="@string/load_current_ranking"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/resetCollection"
        android:title="@string/reset_collection"
        android:visible="true"
        app:showAsAction="never" />

</menu>