<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/secondary"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/original_name"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editOriginalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/year_published"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/yearPickerNull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="disableYearPicker"
                    android:text="@string/noneSelected"
                    android:textAlignment="center" />

            </LinearLayout>

            <NumberPicker
                android:id="@+id/yearPicker"
                style="@android:style/Widget.Material.NumberPicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date_ordered"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dateOrderedPickerNull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:onClick="disableDateOrderedPicker"
                    android:text="@string/noneSelected"
                    android:textAlignment="center" />

            </LinearLayout>

            <DatePicker
                android:id="@+id/dateOrderedPicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/date_added"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dateAddedPickerNull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="disableDateAddedPicker"
                    android:text="@string/noneSelected"
                    android:textAlignment="center" />

            </LinearLayout>

            <DatePicker
                android:id="@+id/dateAddedPicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_purchased"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPricePurchased"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rrp"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editRRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/barcode"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mpn"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMPN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/base_expansion_status"
                    android:textAlignment="center" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <RadioButton
                    android:id="@+id/baseRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/base" />

                <RadioButton
                    android:id="@+id/expansionRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/expansion" />

                <RadioButton
                    android:id="@+id/bothRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/both" />
            </RadioGroup>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location"
                    android:textAlignment="center" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

            </RadioGroup>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_comment"
            app:boxBackgroundColor="@color/secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editLocationComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>